feat: change cache strategy for static resources

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <script defer src="alpine-component@1.2.0.min.js"></script>
-    <script defer src="alpinejs.3.14.9.min.js"></script>
+    <script defer src="vendor/alpine-component@1.2.0.min.js"></script>
+    <script defer src="vendor/alpinejs.3.14.9.min.js"></script>
     <link rel="stylesheet" href="assets/utilities.css">
     <link title="model" rel="stylesheet" href="assets/model.css">
     <link title="utilities" rel="stylesheet" href="assets/utilities.css">
